# JoyCore-X

./: .gitignore  2025-08-08-analyze-httpsgithubcomgingerskulljoycore-x-a.txt  CLAUDE.md  MIGRATION_PROGRESS.md  README.md  binaryInstruction.txt  commit-message.txt  package-lock.json  package.json  test_storage_fix.py  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: binary.rs  mod.rs
src-tauri/src/device/: manager.rs  mod.rs  models.rs  port_monitor.rs
src-tauri/src/device/port_monitor/: linux.rs  macos.rs  windows.rs
src-tauri/src/hid/: mod.rs
src-tauri/src/raw_state/: mod.rs  monitor.rs  parser.rs  reader.rs  types.rs
src-tauri/src/serial/: interface.rs  mod.rs  protocol.rs
src-tauri/src/serial/unified/: mod.rs  reader.rs  types.rs
src-tauri/src/serial/unified/tests/: latency_metrics.rs
src-tauri/src/update/: mod.rs  models.rs  service.rs
src-tauri/tests/: LATENCY_TEST_PLAN.md  latency_metrics.rs  unified_button_get.rs  unified_list_files.rs  unified_read_file.rs  unified_serial_parsing.rs  unified_status.rs  unified_status_matcher.rs  unified_storage_info.rs
src/components/: AxisConfiguration.tsx  Badge.tsx  ButtonConfiguration.tsx  ButtonStateBadge.tsx  CollapsedSidebar.tsx  ConfigurationTabs.tsx  Dashboard.tsx  DeviceConfigManagement.tsx  DeviceConfiguration.tsx  DeviceConnection.tsx  DeviceList.tsx  FirmwareUpdateDialog.tsx  FirmwareUpdateNotification.tsx  MatrixStateGrid.tsx  PicoSVG.tsx  PinDropdown.tsx  PinoutConfiguration.tsx  ProfileManagement.tsx  RawPinStateBadge.tsx  RawStateBadge.tsx  ShiftRegisterDisplay.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: badge-variants.ts  badge.tsx  button.tsx  card.tsx  checkbox.tsx  number-input.tsx  progress.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx
src/contexts/: DeviceContext.tsx  DisplayModeContext.tsx  FirmwareUpdatesContext.ts  FirmwareUpdatesContext.tsx  FirmwareUpdatesProvider.tsx  RawStateConfigContext.tsx  firmwareUpdatesTypes.ts
src/hooks/: useDevice.ts  useDeviceConfig.ts  useDeviceConfigReader.ts  useDeviceConfigWithPins.ts  useDevicePinReader.ts  useFirmwareUpdates.ts  useRawPinState.ts
src/lib/: dev-config.ts  types.ts  utils.ts
