[package]
name = "joycore-x"
version = "0.1.0"
description = "HOTAS Configuration Dashboard for JoyCore firmware"
authors = ["JoyCore Team"]
license = "GPL-3.0"
repository = "https://github.com/gingerskull/JoyCore-X-tauri"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "joycore_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
# Core framework
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Serial communication
serialport = "4.5"
tokio-serial = "5.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
once_cell = "1.19"

# HTTP client and version management
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = { version = "1.0", features = ["serde"] }
futures-util = "0.3"
sha2 = "0.10"

# HID device support
hidapi = "2.6"
hex = "0.4"

# Platform-specific dependencies for USB port monitoring
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation"
] }

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[features]
default = []

# Development profile tuning for better runtime performance closer to release
[profile.dev]
# Moderate optimization for local crate without making rebuilds too slow
opt-level = 2
# Keep debug info (can be reduced to 1 if compile time matters more)
debug = true
# Ensure incremental compilation stays enabled for faster successive builds
incremental = true

# Fully optimize dependencies (often bulk of CPU work) for realistic perf
[profile.dev.package."*"]
opt-level = 3

